docs: complete documentation pass updating README.md, ARCHITECTURE.md, and SPECIFICATIONS.md to v4.0.0 with 175k cell Earth benchmark metrics, 30 Type B engines catalog, and validation kernel details